--- a/hidrocarbonetos/alcanos/metano/index.html
+++ b/hidrocarbonetos/alcanos/metano/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/3Dmol/1.6.3/3Dmol-min.min.js"></script>
     <title>Metano - grsousajunior.github.io</title>
+    <!-- Info -->
+    <meta name="description" content="Modelo 3D da molécula do metano - grsousajunior.github.io" />
+    <meta name="author" content="Gustavo Sousa Jr" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://grsousajunior.github.io/metano">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Metano - grsousajunior.github.io">
+    <meta property="og:description" content="Modelo 3D da molécula do metano - grsousajunior.github.io"/>
+    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/metano.png"/>
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="grsousajunior.github.io">
+    <meta property="twitter:url" content="https://grsousajunior.github.io/metano">
+    <meta name="twitter:title" content="Metano - grsousajunior.github.io">
+    <meta name="twitter:description" content="Modelo 3D da molécula do metano - grsousajunior.github.io">
+    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/metano.png">
 </head>
 <body style="margin: 0; padding: 0;">
     <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="metano.sdf" data-type="sdf" data-style="stick"></div>    
