--- a/hidrocarbonetos/alcanos/index.html
+++ b/hidrocarbonetos/alcanos/index.html
@@ -6,7 +6,8 @@
     <title>Alcanos - grsousajunior.github.io</title>
 </head>
 <body>
-    <h1>Lorem</h1>
+    <h1>Alcanos</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quam, sed laudantium molestiae tempora exercitationem consequuntur accusamus aspernatur, similique vero nemo est atque! Molestiae laborum culpa libero veritatis explicabo consectetur!</p>
+    <a href="metano/">Metano</a>
 </body>
 </html>
