--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
     <title>Modelos moleculares - grsousajunior.github.io</title>
 </head>
 <body>
-    <h1>Modelos moleculares</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quam, sed laudantium molestiae tempora exercitationem consequuntur accusamus aspernatur, similique vero nemo est atque! Molestiae laborum culpa libero veritatis explicabo consectetur!</p>
-    <a href="hidrocarbonetos/">Hidrocarbonetos</a>
+    <div class="container">
+        <h1>Modelos moleculares</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quam, sed laudantium molestiae tempora exercitationem consequuntur accusamus aspernatur, similique vero nemo est atque! Molestiae laborum culpa libero veritatis explicabo consectetur!</p>
+        <a href="hidrocarbonetos/index.html">Hidrocarbonetos</a>
+    </div><!-- container -->
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
