change model style

--- a/hidrocarbonetos/alcanos/heptano/index.html
+++ b/hidrocarbonetos/alcanos/heptano/index.html
@@ -25,6 +25,6 @@
     <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/heptano/heptano.png">
 </head>
 <body style="margin: 0; padding: 0;">
-    <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="heptano.sdf" data-type="sdf" data-style="stick"></div>
+    <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="heptano.sdf" data-type="sdf" data-style="stick:radius=0.2;sphere:scale=0.25"></div>
 </body>
 </html>
