--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <h1>Modelos moleculares</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti quam, sed laudantium molestiae tempora exercitationem consequuntur accusamus aspernatur, similique vero nemo est atque! Molestiae laborum culpa libero veritatis explicabo consectetur!</p>
-        <a href="hidrocarbonetos/index.html">Hidrocarbonetos</a>
+        <p>Até agora apenas alguns poucos modelos foram adicionados.</p>
+        <a href="hidrocarbonetos/index.html">Hidrocarbonetos <span class="badge bg-secondary">10</span></a>
     </div><!-- container -->
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
