--- a/hidrocarbonetos/alcanos/etano/index.html
+++ b/hidrocarbonetos/alcanos/etano/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Etano - grsousajunior.github.io">
     <meta property="og:description" content="Modelo 3D da molécula do etano">
-    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/etano/etano.png">
+    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/etano/etano.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- Twitter Meta Tags -->
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/etano">
     <meta name="twitter:title" content="Etano - grsousajunior.github.io">
     <meta name="twitter:description" content="Modelo 3D da molécula do etano">
-    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/etano/etano.png">
+    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/etano/etano.jpg">
 </head>
 <body style="margin: 0; padding: 0;">
     <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="etano.sdf" data-type="sdf" data-style="stick:radius=0.2;sphere:scale=0.25" data-backgroundcolor="white"></div>
