--- a/hidrocarbonetos/alcanos/propano/index.html
+++ b/hidrocarbonetos/alcanos/propano/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Propano - grsousajunior.github.io">
     <meta property="og:description" content="Modelo 3D da molécula do propano">
-    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/propano/propano.png">
+    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/propano/propano.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- Twitter Meta Tags -->
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/propano">
     <meta name="twitter:title" content="Propano - grsousajunior.github.io">
     <meta name="twitter:description" content="Modelo 3D da molécula do propano">
-    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/propano/propano.png">
+    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/propano/propano.jpg">
 </head>
 <body style="margin: 0; padding: 0;">
     <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="propano.sdf" data-type="sdf" data-style="stick:radius=0.2;sphere:scale=0.25" data-backgroundcolor="white"></div>
