Include new models
Change 3Dmol.js version from 1.6.3 to 1.6.4 for some models; Include halogen and halide models.

--- a/hidrocarbonetos/alcanos/butano/index.html
+++ b/hidrocarbonetos/alcanos/butano/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Butano - grsousajunior.github.io">
     <meta property="og:description" content="Modelo 3D da molécula do butano">
-    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/butano/butano.jpg">
+    <meta property="og:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/butano/conformacoes/antiperiplanar/butano-antiperiplanar.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- Twitter Meta Tags -->
@@ -22,9 +22,9 @@
     <meta property="twitter:url" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/butano">
     <meta name="twitter:title" content="Butano - grsousajunior.github.io">
     <meta name="twitter:description" content="Modelo 3D da molécula do butano">
-    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/butano/butano.jpg">
+    <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcanos/butano/conformacoes/antiperiplanar/butano-antiperiplanar.jpg">
 </head>
 <body style="margin: 0; padding: 0;">
-    <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="butano.sdf" data-type="sdf" data-style="stick:radius=0.2;sphere:scale=0.25" data-backgroundcolor="white"></div>
+    <div class="viewer_3Dmoljs" id="gldiv" style="width: 100vw; height: 100vh; position: relative;" data-href="conformacoes/antiperiplanar/butano-antiperiplanar.sdf" data-type="sdf" data-style="stick:radius=0.2;sphere:scale=0.25" data-backgroundcolor="white"></div>
 </body>
 </html>
