A lot of updates

--- a/hidrocarbonetos/alcenos/eteno/orbitais/sigma/index.html
+++ b/hidrocarbonetos/alcenos/eteno/orbitais/sigma/index.html
@@ -37,6 +37,6 @@
     <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/hidrocarbonetos/alcenos/eteno/orbital/sigma/eteno-sigma.jpg">
 </head>
     <body style="margin:0;padding:0">
-        <div id="glview" class="viewer_3Dmoljs" data-href="../../../eteno.sdf" data-datatype="sdf" data-style="stick:radius=0.17;sphere:scale=0.25" data-callback="initOrbitals" data-backgroundcolor="0xffffff" style="width: 100vw; height: 100vh; position: relative;"></div>
+        <div id="glview" class="viewer_3Dmoljs" data-href="modelo.sdf" data-datatype="sdf" data-style="stick:radius=0.17;sphere:scale=0.25" data-callback="initOrbitals" data-backgroundcolor="0xffffff" style="width: 100vw; height: 100vh; position: relative;"></div>
 </body>
 </html>
