--- a/ureias/DMTU/index.html
+++ b/ureias/DMTU/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- O título do documento (visível na barra de título do navegador) -->
-    <title>DMTU · grsousajunior.github.io</title>
+    <title>Dimetilenotriureia (DMTU) · grsousajunior.github.io</title>
     <!-- Cria um ligação para o arquivo contendo os estilos da página -->
     <link rel="stylesheet" href="https://grsousajunior.github.io/3Dmol/css/tela-cheia.css">
     <!-- Info -->
@@ -14,7 +14,7 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://grsousajunior.github.io/modelos/ureias/DMTU/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="DMTU · grsousajunior.github.io">
+    <meta property="og:title" content="Dimetilenotriureia (DMTU) · grsousajunior.github.io">
     <meta property="og:description" content="Modelo 3D da molécula do DMTU">
     <meta property="og:image" content="https://grsousajunior.github.io/modelos/ureias/DMTU/modelo.jpg">
     <meta property="og:image:width" content="1200">
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:baseURL" content="grsousajunior.github.io">
     <meta property="twitter:url" content="https://grsousajunior.github.io/modelos/ureias/DMTU/">
-    <meta name="twitter:title" content="DMTU · grsousajunior.github.io">
+    <meta name="twitter:title" content="Dimetilenotriureia (DMTU) · grsousajunior.github.io">
     <meta name="twitter:description" content="Modelo 3D da molécula do DMTU">
     <meta name="twitter:image" content="https://grsousajunior.github.io/modelos/ureias/DMTU/modelo.jpg">
   </head>
